New folder/open-interpreter/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_configured_key_chords.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5620
expression: terminal.backend()
---
"  Keyboard shortcuts                                                                                "
"                                                                                                    "
"  Compose                             Session                                                       "
"  /              Commands             tab     Send message                                          "
"  @              Mention files        ⌥+,     Less reasoning                                        "
"  !              Shell command        ⌥+.     More reasoning                                        "
"  ctrl+x enter   New line             ctrl+c  Quit                                                  "
"  ctrl+v         Paste image                                                                        "
"  ctrl+g ctrl+g  External editor      Transcript (open first)                                       "
"  ctrl+r         Search history       ctrl+t                 Open transcript                        "
"  esc esc        Edit last message    f3                     Find text                              "
"                                      pgup / pgdn            Scroll                                 "
"                                      ctrl+space             Start selection                        "
"                                      ctrl+home / ctrl+end   Top / latest                           "
"                                      shift+⌥+, / shift+⌥+.  Top / latest                           "
"                                                                                                    "
"  /keymap customize                                                                                 "
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? / esc close                                                                                     "
