New folder/open-interpreter/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5294
expression: terminal.backend()
---
"  Keyboard shortcuts                                                                                "
"                                                                                                    "
"  Compose                           Session                   Transcript (open first)               "
"  /            Commands             tab     Send message      ctrl+t                 Open transcript"
"  @            Mention files        ⌥+,     Less reasoning    f3                     Find text      "
"  !            Shell command        ⌥+.     More reasoning    pgup / pgdn            Scroll         "
"  shift+enter  New line             ctrl+c  Quit              ctrl+space             Start selection"
"  ctrl+v       Paste image                                    ctrl+home / ctrl+end   Top / latest   "
"  ctrl+g       External editor                                shift+⌥+, / shift+⌥+.  Top / latest   "
"  ctrl+r       Search history                                                                       "
"  esc          Edit last message                                                                    "
"                                                                                                    "
"  /keymap customize                                                                                 "
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? / esc close                                                                                     "
